--- a/src/app/learning/components/flow/flow.component.html
+++ b/src/app/learning/components/flow/flow.component.html
@@ -50,5 +50,12 @@
     >
       <i class="bi bi-chevron-double-right"></i>
     </button>
+    <button
+      *ngIf="!repetitionModeActive"
+      class="btn btn-success"
+      (click)="nextQuestion()"
+    >
+      <i class="bi bi-chevron-double-right"></i>
+    </button>
   </div>
 </div>
