--- a/src/app/learning/components/summary/summary.component.html
+++ b/src/app/learning/components/summary/summary.component.html
@@ -5,41 +5,43 @@
   </h2>
   <hr />
   <div class="cardContainer">
-    <h4>Bezproblemowe pytania</h4>
-    <div class="progress mb-2" role="progressbar">
-      <div
-        class="progress-bar bg-success"
-        [style.width.%]="getWidth(summary, 'correct')"
-      >
-        {{ getLabel(summary, "correct") }}
+    <ng-container *ngIf="summary.revisionMode">
+      <h4>Bezproblemowe pytania</h4>
+      <div class="progress mb-2" role="progressbar">
+        <div
+          class="progress-bar bg-success"
+          [style.width.%]="getWidth(summary, 'correct')"
+        >
+          {{ getLabel(summary, "correct") }}
+        </div>
       </div>
-    </div>
 
-    <h4>Problemowe pytania</h4>
-    <div class="progress mb-2" role="progressbar">
-      <div
-        class="progress-bar bg-danger"
-        [style.width.%]="getWidth(summary, 'wrong')"
-      >
-        {{ getLabel(summary, "wrong") }}
+      <h4>Problemowe pytania</h4>
+      <div class="progress mb-2" role="progressbar">
+        <div
+          class="progress-bar bg-danger"
+          [style.width.%]="getWidth(summary, 'wrong')"
+        >
+          {{ getLabel(summary, "wrong") }}
+        </div>
       </div>
-    </div>
-    <div class="table-responsive">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Pytanie</th>
-            <th class="text-center">Błędy</th>
-          </tr>
-        </thead>
-        <tbody class="scrollable">
-          <tr *ngFor="let row of getProblematicQuestionsRows(summary)">
-            <td>{{ row.question }}</td>
-            <td class="text-center">{{ row.num }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Pytanie</th>
+              <th class="text-center">Błędy</th>
+            </tr>
+          </thead>
+          <tbody class="scrollable">
+            <tr *ngFor="let row of getProblematicQuestionsRows(summary)">
+              <td>{{ row.question }}</td>
+              <td class="text-center">{{ row.num }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </ng-container>
   </div>
 
   <div class="buttons">
